# ComfyUI_ComfyAssistant

./: .env.example  .gitignore  AGENTS.md  AGENT_PROMPTS_GUIDE.md  AGENT_PROMPTS_README.md  AGENT_TESTING_EXAMPLES.md  BACKEND_TOOLS_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP_AUTOMATED_CHECKS.md  TEXT_BASED_TOOLS_TESTING.md  TOOLS_SETUP_GUIDE.md  __init__.py  agent_prompts.py  api_handlers.py  chat_utilities.py  cli_providers.py  comfyui_examples.py  context_management.py  conversation_logger.py  documentation_resolver.py  environment_scanner.py  message_transforms.py  node_registry.py  provider_manager.py  provider_store.py  provider_streaming.py  pyproject.toml  requirements.txt  skill_manager.py  slash_commands.py  sse_streaming.py  temp_file_store.py  test_provider_command.py  tools_definitions.py  user_context_loader.py  user_context_store.py  (+2 more)
.agents/: conventions.md  investigation-tool-order.md  project-context.md
.agents/skills/architecture-overview/: SKILL.md
.agents/skills/assistant-ui/: SKILL.md
.agents/skills/backend-architecture/: SKILL.md
.agents/skills/backend-tools-declaration/: SKILL.md
.agents/skills/documentation/: SKILL.md
.github/: pr-body.md
.project/: README.md
.project/planning/: README.md  phase_5b_plan.md  refactor-init-py.md
development/phase_0/: implemented.md
development/phase_2/: implemented.md
development/phase_3/: implemented.md
development/phase_4/: implemented.md
development/phase_6/: risks_from_phase_3.md
development/provider_wizard/: implemented.md
doc/: README.md  base-tools.md  commands.md  configuration.md  installation.md  personas.md  roadmap.md  skills.md
doc/dev_docs/: README.md  architecture.md  backend.md  context-and-environment.md  frontend.md  health-check.md  standards-and-conventions.md  tools.md  vibecoders-guide.md
planning/: README.md  comfyui_assistant_base_skills.md  comfyui_assistant_design.md  comfyui_assistant_development_phases.md  comfyui_assistant_features.md  comfyui_assistant_non_functional_features.md  comfyui_assistant_skills.md  comfyui_assistant_vibecoding_skills.md  comfyui_assitant_ui_design.md  comfyui_context_management.md  phase_5b_plan.md  provider-wizard-implementation-plan.md
scripts/: run_claude_cli_test.py
system_context/: 01_role.md  README.md
tests/: test_persona_commands.py
ui/: components.json  eslint.config.js  jest.config.js  jest.setup.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/.husky/: pre-commit
ui/patches/: @assistant-ui+react+0.12.9.patch  @assistant-ui+react-ai-sdk+1.3.6.patch  ai+6.0.73.patch
ui/src/: App.css  App.tsx  App.tsx.backup  index.css  main.tsx
user_context/: README.md
user_context/environment/: custom_nodes.json  models.json  summary.json
user_context/logs/: chat_2026-02-13.jsonl
user_context/personas/: README.md
(+160 files in other folders)
