[project]
name = "ComfyUI_ComfyAssistant"
description = "AI Assistant for ComfyUI with agentic capabilities to interact with workflows."
version = "0.2.0"
license = {file = "LICENSE"}
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ddgs>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Repository = "https://github.com/Comfy-Org/ComfyUI-React-Extension-Template"

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "your_publisher_id" # Change this to your actual publisher ID
DisplayName = "ComfyUI React Extension Template"
Icon = ""
includes = ["dist/"]
